`word-wrap` site wide fix

--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -7,6 +7,8 @@ textarea {
 	font-family: $font__main;
 	@include font-size(1);
 	line-height: $font__line-height-body;
+	-ms-word-wrap: break-word;
+	word-wrap: break-word;
 }
 
 @import "headings";
